# fkms

./: Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: ci.yml
proto/fkms/v1/: signer.proto
proto/kms/v1/: signer.proto
src/: codec.rs  commands.rs  config.rs  lib.rs  main.rs  proto.rs  server.rs  signer.rs  util.rs
src/codec/: cosmwasm_secret.rs  evm.rs  flow.rs  icon.rs  soroban.rs  tss.rs  xrpl.rs
src/commands/: config.rs  key.rs  start.rs  utils.rs
src/config/: logging.rs  server.rs  signer.rs  tss.rs
src/config/signer/: aws.rs  local.rs
src/config/tss/: group.rs
src/server/: builder.rs  evm.rs  middleware.rs  pre_sign.rs  service.rs  utils.rs  verifier.rs
src/server/middleware/: auth.rs  store.rs
src/server/middleware/auth/: store.rs
src/server/middleware/auth/store/: sql.rs
src/server/middleware/store/: sql.rs
src/signer/: aws.rs  local.rs  provider.rs  signature.rs
src/signer/provider/: aws.rs  local.rs
src/signer/signature/: ecdsa.rs  ed25519.rs
src/verifier/: tss.rs
src/verifier/tss/: message.rs  signature.rs
src/verifier/tss/message/: evm.rs  xrpl.rs
