[package]
name = "fkms"
version = "0.1.0-alpha.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
name = "fkms"
path = "src/lib.rs"

[[bin]]
name = "fkms"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive", "string"] }
k256 = { version = "0.13.4", features = ["ecdsa", "std", "arithmetic"] }
hex = "0.4.3"
prost = "0.13.5"
sha3 = "0.10.8"
tonic = "0.13.1"
tonic-reflection = "0.13.1"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
aws-sdk-kms = { version = "1.68.0", optional = true }
aws-config = { version = "1.6.2", optional = true }
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
toml = "0.8.22"
base64 = { version = "0.22.1", optional = true }
sea-orm = { version = "1.1.12", optional = true }
http = "1.3.1"
tower = {version = "0.5.2", optional = true}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
bs58 = "0.5.1"
ripemd = "0.1.3"
thiserror = "2.0.18"
xrpl-rust = "1.0.0"
xrpl_binary_codec = { git = "https://github.com/tanut32039/xrpl-sdk-rust", rev = "89f8e541d76a02c66932ebe34cea019c54eb4741", features = ["json"] }
serde_json = "1.0.149"
alloy-signer-local = { version = "1.5.2", features = ["mnemonic"] }
alloy-primitives = "1.5.4"
alloy-sol-types = "1.5.4"
rlp = "0.6.1"
hex-literal = "1.1.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[build-dependencies]
tonic-build = { version = "0.13.1", features = ["prost"] }

[features]
default = ["local"]
all = ["local", "aws", "middleware"]
local = ["base64"]
aws = ["aws-sdk-kms", "aws-config"]
middleware = ["tower", "sea-orm"]
